# pomodoro-timer

./: .gitignore  AUDIO_REFACTORING.md  LICENSE  LINUX_NATIVE_POLISH.md  MIGRATION_GUIDE.md  NATIVE_POLISH_QUICKREF.md  README.md  build-packages.sh  package.json  svelte.config.js  update-rpm.sh  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  database.rs  main.rs
src/lib/: native.ts  state.svelte.ts  stores.ts
src/lib/components/: CompletionDialog.svelte  ConfirmDialog.svelte  DailySummary.svelte  FontToggle.svelte  SessionProgress.svelte  Statistics.svelte  TaskManager.svelte  ThemeToggle.svelte  Timer.svelte  Toast.svelte  WhiteNoise.svelte
src/lib/stores/: dropdownStore.ts  toastStore.ts
src/routes/: +page.svelte
